--- a/app/assets/i18n/es.json
+++ b/app/assets/i18n/es.json
@@ -89,6 +89,8 @@
     },
     "SEND": {
         "ACCEPT": "Aceptar",
+        "ACTION_BAR_TITLE": "Send BURST",
+        "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Monto",
         "BALANCE": "Balance",
         "CONTACTS": "Contacts",
@@ -105,6 +107,7 @@
     "NOTIFICATIONS" : {
         "ADDRESS": "Introducir una dirección válida",
         "COPIED": "La dirección {{value}} due copiada.",
+        "CONTACT_ADDED": "Contact added successfully!",
         "DECIMAL_AMOUNT": "Introduce, usando decimales, la cantidad de BURST por enviar.",
         "DECIMAL_FEE": "Introduce la comisión (mín. 1) por utilizar.",
         "ENTER_SOMETHING": "Campo vacío",
@@ -122,6 +125,7 @@
             "ACCOUNT_ID": "No es posible generar un id de una contraseña pública.",
             "ADDRESS": "No es posible generar una cuenta de un id.",
             "CONNECTION": "No es posible descargar datos.",
+            "CONTACT":"Failed to add new contact!",
             "CURRENCY": "No fue posible cambiar la divisa.",
             "KEYPAIR": "Error al generar la contraseña.",
             "LANGUAGE": "Error al cambiar de idioma.",
