--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -96,8 +96,9 @@
         "BALANCE": "Solde",
         "CONTACTS": "Contacts",
         "FEE": "Frais",
-        "RECIPIENT": "Bénéficiaire",
+        "MESSAGE": "Message",
         "PIN_INPUT_HINT": "Pin",
+        "RECIPIENT": "Bénéficiaire",
         "VERIFY": "Vérifier"
     },
     "START" : {
