--- a/app/assets/i18n/ta.json
+++ b/app/assets/i18n/ta.json
@@ -96,8 +96,9 @@
         "BALANCE": "இருப்பு",
         "CONTACTS": "Contacts",
         "FEE": "கட்டணம்",
-        "RECIPIENT": "பெறுநர்",
+        "MESSAGE": "Message",
         "PIN_INPUT_HINT": "ரகசிய எண்",
+        "RECIPIENT": "பெறுநர்",
         "VERIFY": "சரிபார்க்கவும்"
     },
     "START" : {
