--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -95,8 +95,9 @@
         "BALANCE": "Υπόλοιπο",
         "CONTACTS": "Contacts",
         "FEE": "Προμήθεια",
-        "RECIPIENT": "Παραλήπτης",
+        "MESSAGE": "Message",
         "PIN_INPUT_HINT": "PIN",
+        "RECIPIENT": "Παραλήπτης",
         "VERIFY": "Επιβεβαίωση"
     },
     "START" : {
