--- a/app/assets/i18n/it.json
+++ b/app/assets/i18n/it.json
@@ -95,8 +95,9 @@
         "BALANCE": "Saldo",
         "CONTACTS": "Contacts",
         "FEE": "Tassa",
-        "RECIPIENT": "Destinatario",
+        "MESSAGE": "Message",
         "PIN_INPUT_HINT": "Pin",
+        "RECIPIENT": "Destinatario",
         "VERIFY": "Verifica"
     },
     "START" : {
