--- a/app/assets/i18n/de.json
+++ b/app/assets/i18n/de.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "BURST senden",
         "ADD_CONTACT": "Neuen Kontakt hinzufügen",
         "AMOUNT": "Betrag",
+        "BACK": "Zurück",
         "BALANCE": "Saldo",
         "CONTACTS": "Kontakte",
         "FEE": "Gebühr",
