--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -92,6 +92,7 @@
         "AMOUNT": "Ποσό",
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
+        "BACK": "Back",
         "BALANCE": "Υπόλοιπο",
         "CONTACTS": "Contacts",
         "FEE": "Προμήθεια",
