--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Amount",
+        "BACK": "Back",
         "BALANCE": "Balance",
         "CONTACTS": "Contacts",
         "FEE": "Fee",
