--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Envoyer des BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Montant",
+        "BACK": "Back",
         "BALANCE": "Solde",
         "CONTACTS": "Contacts",
         "FEE": "Frais",
