--- a/app/assets/i18n/hu.json
+++ b/app/assets/i18n/hu.json
@@ -92,6 +92,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Mennyiség",
+        "BACK": "Back",
         "BALANCE": "Egyenleg",
         "CONTACTS": "Contacts",
         "FEE": "Díj",
