--- a/app/assets/i18n/ko.json
+++ b/app/assets/i18n/ko.json
@@ -93,6 +93,7 @@
     "ACTION_BAR_TITLE": "BURST 전송",
     "ADD_CONTACT": "Add new contact",
     "AMOUNT": "수량",
+    "BACK": "Back",
     "BALANCE": "잔액",
     "CONTACTS": "Contacts",
     "FEE": "수수료",
