--- a/app/assets/i18n/pl.json
+++ b/app/assets/i18n/pl.json
@@ -92,6 +92,7 @@
         "AMOUNT": "Kwota",
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
+        "BACK": "Back",
         "BALANCE": "Stan konta",
         "CONTACTS": "Contacts",
         "FEE": "Opłata",
