--- a/app/assets/i18n/ru.json
+++ b/app/assets/i18n/ru.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Перевести BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Сумма",
+        "BACK": "Back",
         "BALANCE": "Баланс",
         "CONTACTS": "Contacts",
         "FEE": "Комиссия",
