--- a/app/assets/i18n/sk.json
+++ b/app/assets/i18n/sk.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Čiastka",
+        "BACK": "Back",
         "BALANCE": "Zostatok",
         "CONTACTS": "Contacts",
         "FEE": "Poplatok",
