--- a/app/assets/i18n/ta.json
+++ b/app/assets/i18n/ta.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "அனுப்பு BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "தொகை",
+        "BACK": "Back",
         "BALANCE": "இருப்பு",
         "CONTACTS": "Contacts",
         "FEE": "கட்டணம்",
