--- a/app/assets/i18n/zh.json
+++ b/app/assets/i18n/zh.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "发 BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "金额",
+        "BACK": "Back",
         "BALANCE": "余额",
         "CONTACTS": "Contacts",
         "FEE": "交易费",
