--- a/app/assets/i18n/es.json
+++ b/app/assets/i18n/es.json
@@ -92,6 +92,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Monto",
+        "BACK": "Back",
         "BALANCE": "Balance",
         "CONTACTS": "Contacts",
         "FEE": "Comisión",
