--- a/app/assets/i18n/hi.json
+++ b/app/assets/i18n/hi.json
@@ -93,6 +93,7 @@
         "ACTION_BAR_TITLE": "BURST भेजें",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "रकम",
+        "BACK": "Back",
         "BALANCE": "शेष",
         "CONTACTS": "Contacts",
         "FEE": "फ़ीस",
