--- a/app/assets/i18n/sv.json
+++ b/app/assets/i18n/sv.json
@@ -92,6 +92,7 @@
         "ACTION_BAR_TITLE": "Send BURST",
         "ADD_CONTACT": "Add new contact",
         "AMOUNT": "Belopp",
+        "BACK": "Back",
         "BALANCE": "Saldo",
         "CONTACTS": "Contacts",
         "FEE": "Avgift",
