reworked create new account architecture

--- a/app/assets/i18n/en.json
+++ b/app/assets/i18n/en.json
@@ -97,6 +97,7 @@
         "BALANCE": "Balance",
         "CONTACTS": "Contacts",
         "FEE": "Fee",
+        "FIAT": "FIAT Amount",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "Pin",
         "RECIPIENT": "Recipient",
