--- a/app/assets/i18n/el.json
+++ b/app/assets/i18n/el.json
@@ -96,6 +96,7 @@
         "BALANCE": "Υπόλοιπο",
         "CONTACTS": "Contacts",
         "FEE": "Προμήθεια",
+        "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "PIN",
         "RECIPIENT": "Παραλήπτης",
