--- a/app/assets/i18n/fr.json
+++ b/app/assets/i18n/fr.json
@@ -97,6 +97,7 @@
         "BALANCE": "Solde",
         "CONTACTS": "Contacts",
         "FEE": "Frais",
+        "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "Pin",
         "RECIPIENT": "Bénéficiaire",
