--- a/app/assets/i18n/ta.json
+++ b/app/assets/i18n/ta.json
@@ -97,6 +97,7 @@
         "BALANCE": "இருப்பு",
         "CONTACTS": "Contacts",
         "FEE": "கட்டணம்",
+        "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "ரகசிய எண்",
         "RECIPIENT": "பெறுநர்",
