--- a/app/assets/i18n/hi.json
+++ b/app/assets/i18n/hi.json
@@ -97,6 +97,7 @@
         "BALANCE": "शेष",
         "CONTACTS": "Contacts",
         "FEE": "फ़ीस",
+        "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "पिन",
         "RECIPIENT": "पानेवाला",
