--- a/app/assets/i18n/hu.json
+++ b/app/assets/i18n/hu.json
@@ -96,6 +96,7 @@
         "BALANCE": "Egyenleg",
         "CONTACTS": "Contacts",
         "FEE": "Díj",
+        "FIAT": "Fiat currency to BURST",
         "MESSAGE": "Message",
         "PIN_INPUT_HINT": "PIN",
         "RECIPIENT": "Címzett",
